--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,7 +106,11 @@ top: 0;
 left: 60px; /*position where enlarged image should offset horizontally */
 
 }
-
+#melding {
+	height: 19px;
+	min-height: 19px;
+	max-height: 19px;
+}
 
 #reg-student {
 	width: 40%;
